chaim-bprint-spec/tests/fixtures/invalid/invalid-min-greater-than-max.bprint
{
  "schemaVersion": "1.0",
  "entityName": "Invalid",
  "description": "Invalid: min is greater than max",
  "identity": { "fields": ["id"] },
  "fields": [
    {
      "name": "id",
      "type": "string",
      "required": true
    },
    {
      "name": "quantity",
      "type": "number",
      "required": true,
      "constraints": {
        "min": 100,
        "max": 10
      }
    }
  ]
}
